# locg-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-20-collection-details.md
docs/superpowers/specs/: 2026-04-20-collection-details-design.md
src/locg/: __init__.py  __main__.py  cli.py  client.py  commands.py  config.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_client.py  test_commands.py  test_config.py  test_models.py  test_parser.py
tests/fixtures/: comic_detail.html  comic_detail_my_details.html  comic_detail_my_details_not_collected.html  releases.json  search_series.json  series_issues.json  series_page.html
